--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ packaging==24.1
 pandas==2.2.2
 pandocfilters==1.5.1
 pillow==10.4.0
+pickle
 platformdirs==4.2.2
 prometheus_client==0.20.0
 pycparser==2.22
